# orbit_propagator

./: CMakeLists.txt  gps_tracker_api.c  gps_tracker_api.h  main.c  main_payload.c  mine_tle.txt  norad_id_to_prn.txt  orbit_propagator.c  orbit_propagator.h  payload_tracker_api.c  payload_tracker_api.h  readme.md  satutl.c
apps/: CMakeLists.txt  example.cpp  pass_predictor.cpp
examples/: galileo.txt  main.c  main_payload.c  norad_id_to_prn_galileo.txt
inc/: data_simulator.h  link.h  motor_angles.h  orbit_simulator.h  payload_tracker_api.h
lib/: libc_orbit_propagator.0.1.dylib  libc_orbit_propagator.dylib  libsimulator.0.1.dylib  libsimulator.dylib
src/: CMakeLists.txt  a.out  data_simulator.cpp  link.cpp  motor_angles.cpp  orbit_simulator.cpp
